--- a/src/components/actors/Actor.css
+++ b/src/components/actors/Actor.css
@@ -1,4 +1,13 @@
 .actors-area{
+   display: flex;
+   
+    
+}
+.actor-container{
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: repeat(3,1fr);
+    margin-right: 100px; 
+}
+.cart-area{
+    text-align: center;
 }
